@@ -69,20 +69,20 @@ SubGroups = "Subgroups"
 BrowserComponent = "Browser"
 ViewerComponent = "Viewer"
 CreatorComponent = "Creator"
-GroupManagerDeleterComponent = "Deleter"
-GroupManagerEditorComponent = "Updater"
+DeleterComponent = "Deleter"
+EditorComponent = "Updater"
 ExporterComponent = "Exporter"
-GroupManagerGroupRightsTemplateManagerComponent = "Template manager"
+GroupRightsTemplateManagerComponent = "Template manager"
 GroupUserImporterComponent = "User importer"
 ImporterComponent = "Group importer"
-GroupManagerImporterComponent = "Importer"
-GroupManagerMoverComponent = "Mover"
-GroupManagerRightsEditorComponent = "Rights editor"
-GroupManagerSubscribeUserBrowserComponent = "Subscribe user browser"
-GroupManagerSubscriberComponent = "Subscriber"
-GroupManagerTruncaterComponent = "Truncater"
-GroupManagerUnsubscriberComponent = "Unsubscriber"
-GroupManagerUsageManagerComponent = "Usage manager"
+ImporterComponent = "Importer"
+MoverComponent = "Mover"
+RightsEditorComponent = "Rights editor"
+SubscribeUserBrowserComponent = "Subscribe user browser"
+SubscriberComponent = "Subscriber"
+TruncaterComponent = "Truncater"
+UnsubscriberComponent = "Unsubscriber"
+UsageManagerComponent = "Usage manager"
 SelectedUserAddedToGroup = "Selected user added to group"
 SelectedUsersAddedToGroup = "Selected users added to group"
 SelectedGroupRelUsersDeleted = "Selected group users deleted"
