@@ -68,20 +68,20 @@ SubGroups = "Subgroep"
 BrowserComponent = "Browser"
 ViewerComponent = "Viewer"
 CreatorComponent = "Creator"
-GroupManagerDeleterComponent = "Deleter"
-GroupManagerEditorComponent = "Updater"
+DeleterComponent = "Deleter"
+EditorComponent = "Updater"
 ExporterComponent = "Exporter"
-GroupManagerGroupRightsTemplateManagerComponent = "Template manager"
+GroupRightsTemplateManagerComponent = "Template manager"
 GroupUserImporterComponent = "Gebruikers importer"
 ImporterComponent = "Group importer"
-GroupManagerImporterComponent = "Importer"
-GroupManagerMoverComponent = "Verplaats"
-GroupManagerRightsEditorComponent = "Rechten editor"
-GroupManagerSubscribeUserBrowserComponent = "Inschrijven"
-GroupManagerSubscriberComponent = "Inschrijver"
-GroupManagerTruncaterComponent = "Afbreker"
-GroupManagerUnsubscriberComponent = "Uitschrijver"
-GroupManagerUsageManagerComponent = "Gebruikersbeheerder"
+ImporterComponent = "Importer"
+MoverComponent = "Verplaats"
+RightsEditorComponent = "Rechten editor"
+SubscribeUserBrowserComponent = "Inschrijven"
+SubscriberComponent = "Inschrijver"
+TruncaterComponent = "Afbreker"
+UnsubscriberComponent = "Uitschrijver"
+UsageManagerComponent = "Gebruikersbeheerder"
 SelectedUserAddedToGroup = "Voeg geselecteerde gebruiker toe aan groep"
 SelectedUsersAddedToGroup = "Geselecteerde gebruikers aan groep toegevoegd"
 SelectedGroupRelUsersDeleted = "Geselecteerde groep her-/gebruikers verwijderd"
